--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo-boost": "^0.4.9",
     "graphql": "^15.0.0",
     "jest": "24.9.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
